Persistence: The extension now saves your chosen speed and applies it to upcoming videos as you scroll.Interaction Fix: I've added event blockers to ensure clicking the slider won't pause the video.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
     "entrypoints",
     "vite.config.ts",
     "wxt.config.ts",
-    "wxt-env.d.ts"
+    "wxt-env.d.ts",
+    ".wxt/types"
   ]
 }
